Fixed some style on mobile

--- a/themes/akia/assets/scss/_custom.scss
+++ b/themes/akia/assets/scss/_custom.scss
@@ -269,6 +269,9 @@ div.overlayed {
 				width: 0;
 			}
 		}
+		h6 {
+			margin-top: 0px;
+		}
 		img {
 			max-width: 100%;
 		}
